overflow issue

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
-html { 
-  font-size:100%; 
+html, body { 
+  overflow-x: hidden;
 }
 
 h1,
